# cloud-waste-tracker

./: .gitignore  action_list.txt  create_render_tables.py  create_tables.py  env.example  local_dev.db  main.py  pyproject.toml  render.yaml  requirements.txt  run_api.py  s3_waste_report.csv  summary.txt  waste_report.csv
.streamlit/: config.toml
apps/worker/: main.py
docs/: BUILD_PLAN.md  INFORMATION_ARCHITECTURE.md
scripts/: init_db.py
src/api/: __init__.py  main.py  models.py
src/cloud_waste_tracker/actions/: ec2_actions.py  s3_actions.py
src/cloud_waste_tracker/cli/: main.py
src/cloud_waste_tracker/config/: secrets.py
src/cloud_waste_tracker/reports/: emailer.py  summarize.py
src/cloud_waste_tracker/scanners/: ec2_scanner.py  s3_scanner.py
src/cloud_waste_tracker/utils/: utils.py
src/config/: development.py  factory.py  production.py  settings.py  validators.py
src/core/: __init__.py  exceptions.py  logging.py  validators.py
src/core/services/: region_service.py  scan_service.py
src/cwt_ui/: app.py
src/cwt_ui/components/: kpi_card.py  setup_aws_content.py  tables.py
src/cwt_ui/insights/: sp_rules.py
src/cwt_ui/pages/: 0_AWS_Setup.py  0_Beautiful_Demo.py  0_Setup.py  1_Dashboard.py  1_Overview.py  1_Savings_Plans.py  2_EC2.py  2_EC2_vs_SP_Alignment.py  2_Spend.py  3_S3.py  S3.py  (+12 more)
src/dashboard/: recent_scans.py
src/db/: __init__.py  __main__.py  db.py  models.py  repo.py
src/scanners/: ec2_scanner.py  ec2_sp_alignment_scanner.py  fargate_scanner.py  lambda_scanner.py  s3_scanner.py  s3_scanner_enhanced.py  savings_plans_scanner.py
(+39 files in other folders)
